Updated to connect to DB on Azure
